--- a/src/components/section-3_comp/car.css
+++ b/src/components/section-3_comp/car.css
@@ -103,3 +103,12 @@
 .move{
   padding-left: 12%;
 }
+
+
+@media only screen and (max-width : 990px){
+  .move{
+    padding: 0;
+    position: relative;
+    left: -1.4em;
+  }
+}
